[tool.poetry]
name = "evaluator"
version = "0.1.0"
description = "lib that dynamically retrieves values based on an input schema"
authors = ["Jerry <jerrypmwsh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.0"
jsonpath-ng = "^1.5.2"
requests = "^2.24.0"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
